集成三方发送短信功能

--- a/CloudRestaurant/config/app.json
+++ b/CloudRestaurant/config/app.json
@@ -2,5 +2,12 @@
   "app_name": "cloudrestaurant",
   "app_mode": "debug",
   "app_host": "localhost",
-  "app_port": "8090"
+  "app_port": "8090",
+  "sms": {
+    "sign_name":"线上餐厅",
+    "template": "SMS_176525619",
+    "app_key": "xxx",
+    "app_secret": "xxx",
+    "region_id": "cn-hangzhou"
+  }
 }
