--- a/CloudRestaurant/config/app.json
+++ b/CloudRestaurant/config/app.json
@@ -5,9 +5,19 @@
   "app_port": "8090",
   "sms": {
     "sign_name":"线上餐厅",
-    "template": "SMS_176525619",
+    "template": "SMS_211021073",
     "app_key": "xxx",
     "app_secret": "xxx",
     "region_id": "cn-hangzhou"
+  },
+  "database": {
+    "driver": "mysql",
+    "user": "root",
+    "password": "123456",
+    "host": "127.0.0.1",
+    "port": "3306",
+    "db_name": "cloudrestaurant",
+    "charset": "utf8",
+    "show_sql": true
   }
 }
